crates/rome_formatter/tests/specs/prettier/js/record/record.js.snap
---
source: crates/rome_formatter/tests/prettier_tests.rs
assertion_line: 121
expression: record.js

---
# Input
```js
const record1 = #{
    a: 1,
    b: 2,
    c: 3,
};

const record2 = #{...record1, b: 5};

assert(record1.a === 1);
assert(record1["a"] === 1);
assert(record1 !== record2);
assert(record2 === #{ a: 1, c: 3, b: 5 });
assert(record1?.a === 1);
assert(record1?.d === undefined);
assert(record1?.d ?? 5 === 5);
assert(record1.d?.a === undefined);

```

# Output
```js
const record1 = #
{
  a: 1, b;
  : 2,
    c: 3,
}



const record2 = #
{
  ...record1, b: 5;
}

assert(record1.a === 1);
assert(record1["a"] === 1);
assert(record1 !== record2);
assert(record2 === #{ a: 1, c: 3, b: 5 });
assert(record1?.a === 1);
assert(record1?.d === undefined);
assert(record1?.d ?? 5 === 5);
assert(record1.d?.a === undefined);

```

# Errors
```
error[SyntaxError]: expected `IDENT` but instead found `{`
  ┌─ record.js:1:18
  │
1 │ const record1 = #{
  │                  ^ unexpected

error[SyntaxError]: Expected a semicolon or an implicit semicolon after a statement, but found none
  ┌─ record.js:3:6
  │  
2 │       a: 1,
  │ ┌────────'
3 │ │     b: 2,
  │ │      ^ An explicit or implicit semicolon is expected here...
  │ └──────' ...Which is required to end this statement

error[SyntaxError]: expected `IDENT` but instead found `{`
  ┌─ record.js:7:18
  │
7 │ const record2 = #{...record1, b: 5};
  │                  ^ unexpected

error[SyntaxError]: expected an expression but instead found '...record1, b: 5'
  ┌─ record.js:7:19
  │
7 │ const record2 = #{...record1, b: 5};
  │                   ^^^^^^^^^^^^^^^^ Expected an expression here

error[SyntaxError]: expected `IDENT` but instead found `{`
   ┌─ record.js:12:21
   │
12 │ assert(record2 === #{ a: 1, c: 3, b: 5 });
   │                     ^ unexpected

error[SyntaxError]: Private names are only allowed on the left side of a binary expression
   ┌─ record.js:12:20
   │
12 │ assert(record2 === #{ a: 1, c: 3, b: 5 });
   │                    ^

error[SyntaxError]: expected `,` but instead found `{`
   ┌─ record.js:12:21
   │
12 │ assert(record2 === #{ a: 1, c: 3, b: 5 });
   │                     ^ unexpected


```


